# public/openapi.yaml
@@ -1041,6 +1041,154 @@ paths:
                 $ref: '#/components/schemas/inline_response_401'
 
   '/api/private/orders':
+    get:
+      tags:
+        - Order
+      description: Returns all orders from a catering
+      summary: Get all orders
+      parameters:
+        - in: header
+          name: Authorization
+          schema:
+            type: string
+            format: bearer
+            example: Bearer 105Ua13XmskD3WS9MGFHy2IqMOqT6luSm09JBsSt3T
+          required: true
+        - name: api_key
+          in: query
+          description: API key provided by Farrel Anshary
+          required: true
+          schema:
+            type: string
+          example: asdasd
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Love letter from server ❤️
+                    example: "Successfully get all orders"
+                  data:
+                    type: object
+                    description: Returned data from server
+                    properties:
+                      total:
+                        type: number
+                        description: Total active orders
+                        example: 30
+                      orders:
+                        type: array
+                        items:
+                          type: object
+                          description: Single order data
+                          properties:
+                            id:
+                              type: integer
+                              description: ID represents a unique identifier of the order
+                              example: 11
+                            status:
+                              type: number
+                              description: Status of the order
+                              example: 2
+                            rating:
+                              type: number
+                              description: Rating of the order
+                              example: 4
+                            review:
+                              type: string
+                              description: Review of the order
+                              example: Enak sih, tapi gimana ya...
+                            schedule:
+                              type: object
+                              description: Single schedule data
+                              properties:
+                                id:
+                                  type: integer
+                                  description: ID represents a unique identifier of the schedule
+                                  example: 11
+                                date:
+                                  type: string
+                                  format: date
+                                  description: Date of the schedule
+                                  example: "2021-11-20"
+                                price:
+                                  type: number
+                                  description: Price of meal on that day
+                                  example: 29000
+                                menu:
+                                  type: object
+                                  description: Menu on that day
+                                  properties:
+                                    id:
+                                      type: integer
+                                      description: ID represents a unique identifier of the menu
+                                      example: 11
+                                    name:
+                                      type: string
+                                      description: Name of the menu
+                                      example: "Paket Nasi Goreng A"
+                                    image:
+                                      type: string
+                                      description: Image of the menu (nullable)
+                                      example: "59240f5242fa9312b4caf7a8d59f8ef7.png"
+                                    description:
+                                      type: string
+                                      description: Description of the menu
+                                      example: "Ini enak lho..."
+                            user:
+                              type: object
+                              description: User data
+                              properties:
+                                id:
+                                  type: integer
+                                  description: ID represents a unique identifier of the user
+                                  example: 1
+                                name:
+                                  type: string
+                                  description: Name of the user
+                                  example: Farrel Najib Anshary
+                                email:
+                                  type: string
+                                  description: User's email
+                                  example: farrel.anshary@binus.ac.id
+                                phone:
+                                  type: number
+                                  description: User's phone number
+                                  example: 628112233
+                                role:
+                                  type: number
+                                  description: Role of the user (1 for catering, 2 for user)
+                                  example: 1
+                                address:
+                                  type: string
+                                  description: Address of the user
+                                  example: Green Office Park 9
+                                radius:
+                                  type: number
+                                  description: Radius of the delivery supported in meters (Required for catering role)
+                                  example: 2000
+                                latitude:
+                                  type: number
+                                  format: double
+                                  description: Latitude of the catering location (Required for catering role)
+                                  example: -6.302171
+                                longitude:
+                                  type: number
+                                  format: double
+                                  description: Longitude of the catering location (Required for catering role)
+                                  example: 106.652326
+
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/inline_response_401'
     post:
       tags:
         - Order
